fixing scroll bar visibility

--- a/frontend/src/components/AppSideBar/sidebar.module.css
+++ b/frontend/src/components/AppSideBar/sidebar.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   gap: 16px;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .link {
